--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -13,13 +13,11 @@ html(ng-app="roastLogApp")
 		div(layout="row" class="header" layout-align="center center")
 			ul(flex)
 				li
-					//
-						a(href="#" ng-click="addRoastPanel.show = !addRoastPanel.show") Add New Roast
 					a(href="/#/add_roast") Add New Roast
 				li
 					a(href="/#/") Show All Roasts
 
-		div(flex ng-view)
+		div(ng-view)
 
 		script(src="./vendor/ng-file-upload/angular-file-upload-shim.js") 
 		script(src="./vendor/jquery/dist/jquery.min.js")
