working basic crud, all through front end. Just before css overhaul

--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -19,7 +19,7 @@ html(ng-app="roastLogApp")
 
 		div(ng-view)
 
-		script(src="./vendor/ng-file-upload/angular-file-upload-shim.js") 
+		//- script(src="./vendor/ng-file-upload/angular-file-upload-shim.js") 
 		script(src="./vendor/jquery/dist/jquery.min.js")
 		//- script(src="./vendor/jquery-ui/jquery-ui.min.js")
 		//- script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js")
