--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -81,6 +81,42 @@
     height: 40px;
     width: 100%;
 }
+/////////////////////////////////////////
+//
+// FIX FOR DATEPICKER in version 0.11.4
+// https://github.com/angular/material/issues/5170
+//
+/////////////////////////////////////////
+
+.md-datepicker-calendar, .md-datepicker-input-mask-opaque{
+	background: rgb(255,255,255);
+}
+
+
+.md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator{
+  background: rgb(33,150,243);
+  color: rgb(255,255,255);
+  border-color: transparent;
+}
+
+.md-calendar-date-selection-indicator:hover{
+  background: rgb(224,224,224);
+}
+
+.md-calendar-day-header{
+  background: rgb(224,224,224);
+  color: rgba(0,0,0,0.87);
+}
+
+.md-calendar-date-disabled, .md-calendar-month-label-disabled{
+	color: rgba(0,0,0,0.26);
+}
+
+/////////////////////////////////////////
+//
+// end fix for datepicker
+//
+/////////////////////////////////////////
 
 // button {
 // 	width: 200px;
