--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -35,6 +35,7 @@ html(ng-app="roastLogApp")
 		//- script(src="./vendor/nvd3/nv.d3.js")
 		//- script(src="./vendor/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js")
 		script(src="./js/services/CRUDservice.js")
+		script(src="./js/services/d3Service.js")
 		script(src="./js/directives/directives.js")
 		script(src="./js/controllers/controllers.js")
 		script(src="//localhost:35729/livereload.js?LR-verbose")
