major overhaul. Readying for production v 0.0.1

--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -1,8 +1,8 @@
-@mixin bouffant{
-	font-family: "bouffant",cursive;
-	font-weight: 100;
-	font-style: normal;
-}
+// @mixin bouffant{
+// 	font-family: "bouffant",cursive;
+// 	font-weight: 100;
+// 	font-style: normal;
+// }
 
 @mixin proxima-sans-nova-light{
 	font-family: "proxima-nova-alt-ext-cond", sans-serif;
@@ -28,14 +28,14 @@
 	font-style: italic;
 }
 
-@mixin adriane-regular-italic {
-	font-family: "adriane, serif";
-	font-weight: 400;
-	font-style: italic;
-}
+// @mixin adriane-regular-italic {
+// 	font-family: "adriane, serif";
+// 	font-weight: 400;
+// 	font-style: italic;
+// }
 
-@mixin buena-park {
-	font-family: "buena-park", sans-serif;
-	font-weight: 400;
-	font-style: normal;
-}
+// @mixin buena-park {
+// 	font-family: "buena-park", sans-serif;
+// 	font-weight: 400;
+// 	font-style: normal;
+// }
