--- a/jade/views/show_roasts.jade
+++ b/jade/views/show_roasts.jade
@@ -1,13 +1,12 @@
 <!-- SHOW ROASTS -->
-div(layout layout-wrap)
-	div(ng-repeat="roast in roasts" flex-sm="100" flex-md="33" flex-gt-md="25")
-		md-content(class="md-padding")
-			md-card
-				img(ng-src='{{roast.file.url}}' class="md-card-image" alt='{{roast.title}}')
-				md-card-content
-					p(class="md-caption") Roasted: {{dateTransform(roast.roastDate)}}
-					h3(class="md-headline") {{roast.title}}
-					p {{roast.roast_notes}}
-				md-card-actions(layout="row" layout-align="end center")
-					md-button(class="md-primary" ng-href="#/single_roast/{{this.roast._id}}") Go To
-					md-button(class="md-warn" ng-click='deleteRoast(this.roast._id)') Delete
+md-content(layout="row" layout-wrap)
+	div(ng-repeat="roast in roasts" flex flex-sm="100" flex-md="33" flex-gt-md="25")
+		md-card(style="display:block;" class="md-padding")
+			img(ng-src='{{roast.file.url}}' class="md-card-image" alt='{{roast.title}}')
+			md-card-content
+				p(class="md-caption") Roasted: {{dateTransform(roast.roastDate)}}
+				h3(class="md-headline") {{roast.title}}
+				p {{roast.roast_notes}}
+			md-card-actions(layout="row" layout-align="end center")
+				md-button(class="md-primary" ng-href="#/single_roast/{{this.roast._id}}") Go To
+				md-button(class="md-warn" ng-click='deleteRoast(this.roast._id)') Delete
